last_execution.log
Processing esp32-c6-mini (platform: espressif32; board: esp32-c6-devkitc-1; framework: espidf)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-c6-devkitc-1.html
PLATFORM: Espressif 32 (55.3.37) > Espressif ESP32-C6-DevKitC-1
HARDWARE: ESP32C6 160MHz, 320KB RAM, 8MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-builtin, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-espidf @ 3.50502.0 (5.5.2) 
 - tool-cmake @ 4.0.3 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.2 
 - tool-ninja @ 1.13.1 
 - tool-scons @ 4.40801.0 (4.8.1) 
 - toolchain-riscv32-esp @ 14.2.0+20251107
Reading CMake configuration...
Warning! Flash memory size mismatch detected. Expected 8MB, found 2MB!
Please select a proper value in your `sdkconfig.defaults` or via the `menuconfig` target!
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 0 compatible libraries
Scanning dependencies...
No dependencies
Building in release mode
Compiling .pio/build/esp32-c6-mini/src/radio_hal.c.o
Compiling .pio/build/esp32-c6-mini/src/esp3_proto.c.o
src/esp3_proto.c: In function 'esp3_process_byte':
src/esp3_proto.c:122:62: error: 'ESP3_TYPE_COMMON_COMMAND' undeclared (first use in this function)
  122 |                     } else if (current_packet.packet_type == ESP3_TYPE_COMMON_COMMAND) {
      |                                                              ^~~~~~~~~~~~~~~~~~~~~~~~
src/esp3_proto.c:122:62: note: each undeclared identifier is reported only once for each function it appears in
*** [.pio/build/esp32-c6-mini/src/esp3_proto.c.o] Error 1
========================= [FAILED] Took 17.52 seconds =========================
